
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct bpf_insn {int dummy; } ;
typedef int prog ;


 struct bpf_insn BPF_DISABLE_VERIFIER () ;
 int BPF_DW ;
 struct bpf_insn BPF_EXIT_INSN () ;
 struct bpf_insn BPF_JMP_IMM (int ,int ,int,int) ;
 int BPF_JNE ;
 struct bpf_insn BPF_LDX_MEM (int ,int ,int ,int) ;
 struct bpf_insn BPF_LD_MAP_FD (int ,int ) ;
 struct bpf_insn BPF_MAP_GET (int,int ) ;
 struct bpf_insn BPF_MOV64_IMM (int ,int ) ;
 struct bpf_insn BPF_MOV64_REG (int ,int ) ;
 int BPF_PROG_TYPE_SOCKET_FILTER ;
 int BPF_REG_0 ;
 int BPF_REG_1 ;
 int BPF_REG_10 ;
 int BPF_REG_2 ;
 int BPF_REG_3 ;
 int BPF_REG_6 ;
 int BPF_REG_7 ;
 int BPF_REG_8 ;
 int BPF_REG_9 ;
 struct bpf_insn BPF_STX_MEM (int ,int ,int ,int) ;
 int bpf_prog_load (int ,struct bpf_insn*,int,char*,int ) ;
 int mapfd ;

__attribute__((used)) static int load_prog() {
 struct bpf_insn prog[] = {
  BPF_DISABLE_VERIFIER(),

  BPF_STX_MEM(BPF_DW, BPF_REG_10, BPF_REG_1, -16),

  BPF_LD_MAP_FD(BPF_REG_9, mapfd),

  BPF_MAP_GET(0, BPF_REG_6),
  BPF_MAP_GET(1, BPF_REG_7),
  BPF_MAP_GET(2, BPF_REG_8),


  BPF_MOV64_REG(BPF_REG_2, BPF_REG_0),
  BPF_MOV64_IMM(BPF_REG_0, 0),

  BPF_JMP_IMM(BPF_JNE, BPF_REG_6, 0, 2),

  BPF_STX_MEM(BPF_DW, BPF_REG_2, BPF_REG_10, 0),
  BPF_EXIT_INSN(),

  BPF_JMP_IMM(BPF_JNE, BPF_REG_6, 1, 3),

  BPF_LDX_MEM(BPF_DW, BPF_REG_3, BPF_REG_10, -16),
  BPF_STX_MEM(BPF_DW, BPF_REG_2, BPF_REG_3, 0),
  BPF_EXIT_INSN(),

  BPF_JMP_IMM(BPF_JNE, BPF_REG_6, 2, 3),

  BPF_LDX_MEM(BPF_DW, BPF_REG_3, BPF_REG_7, 0),
  BPF_STX_MEM(BPF_DW, BPF_REG_2, BPF_REG_3, 0),
  BPF_EXIT_INSN(),


  BPF_STX_MEM(BPF_DW, BPF_REG_7, BPF_REG_8, 0),
  BPF_EXIT_INSN(),

 };
 return bpf_prog_load(BPF_PROG_TYPE_SOCKET_FILTER, prog, sizeof(prog), "GPL", 0);
}
